--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation files('libs/hellocharts-library-1.5.8.jar')
 
 }
